This is my Second commit

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -33,6 +33,7 @@
         android:drawableTint="#673AB7"
         android:gravity="center"
         android:hint="Enter Email"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +54,7 @@
         android:drawablePadding="8dp"
         android:drawableTint="#673AB7"
         android:gravity="center"
+        android:textColor="@color/black"
         android:hint="Enter Password"
         android:inputType="textPassword"
         android:textColorHint="@color/black"
@@ -85,7 +87,7 @@
         android:layout_marginTop="465dp"
         android:layout_marginBottom="220dp"
         android:text="Login"
-        android:onClick="loginhere"
+        android:onClick="login"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
