Facebook Login Implemented But getting problem for fetching its email address

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -87,7 +87,7 @@
         android:layout_marginTop="465dp"
         android:layout_marginBottom="220dp"
         android:text="Login"
-        android:onClick="login"
+        android:onClick="emailLogin"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -150,6 +150,7 @@
         android:layout_marginTop="613dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="58dp"
+        android:onClick="facebookLogin"
         android:background="@android:color/transparent"
         android:contentDescription="Facebook Login"
         android:scaleType="fitCenter"
