--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".signup">
+    tools:context=".forgotPassword">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -22,45 +22,26 @@
         android:layout_height="57dp"
         android:layout_marginStart="27dp"
         android:layout_marginEnd="26dp"
-        android:text="Signup"
+        android:layout_marginBottom="269dp"
+        android:text="Forgot Password"
         android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/alreadylogin"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginpassword"
-        app:layout_constraintVertical_bias="0.411"
+        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordemail"
         tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/loginpassword"
-        android:layout_width="358dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="26dp"
-        android:background="@drawable/rounded_edittext_background"
-        android:drawableStart="@drawable/baseline_lock_24"
-        android:drawablePadding="8dp"
-        android:drawableTint="#673AB7"
-        android:gravity="center"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/forgotpasswordbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordemail" />
 
     <ImageView
         android:id="@+id/clockimage"
         android:layout_width="154dp"
         android:layout_height="124dp"
         android:layout_marginStart="128dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="129dp"
         android:src="@drawable/clock_image1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
 
@@ -72,8 +53,8 @@
         android:layout_marginTop="61dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="623dp"
-        android:text="Signup Here"
-        android:textSize="35dp"
+        android:text="Forgot Password"
+        android:textSize="34dp"
         android:textStyle="italic|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,9 +81,7 @@
         android:id="@+id/forgotpasswordemail"
         android:layout_width="358dp"
         android:layout_height="57dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/rounded_edittext_background"
         android:drawableStart="@drawable/baseline_email_24"
         android:drawableTint="#9C27B0"
@@ -112,22 +91,9 @@
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/loginpassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clockimage" />
-
-    <TextView
-        android:id="@+id/alreadylogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:text="Already a user? Login"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/forgotpasswordbtn"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="@+id/forgotpasswordbtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
