--- a/app/src/main/res/drawable-v24/rounded_edittext_background.xml
+++ b/app/src/main/res/drawable-v24/rounded_edittext_background.xml
@@ -6,4 +6,7 @@
 
     <solid android:color="#ECECEC" /> <!-- Light grey background color -->
 
+    <stroke
+        android:width="1dp" android:color="#6F000000" />
+
 </shape>
