--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:elevation="10dp"
     app:cardCornerRadius="8dp"
@@ -11,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/day"
@@ -51,43 +51,47 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:background="#A6A4A4"
-            />
+            android:layout_margin="5dp"
+            android:background="#A6A4A4" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="5dp">
+        <HorizontalScrollView
+            android:layout_width="120dp"
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tasktitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Video"
-                android:textSize="25sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tasktitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Video"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
 
-            <TextView
-                android:id="@+id/taskdescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Video"
-                android:textSize="20sp"/>
+                <TextView
+                    android:id="@+id/taskdescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="Video"
+                    android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/tasktime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="20:24"
-                android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/tasktime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:text="20:24"
+                    android:textSize="15sp" />
 
-        </LinearLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -98,20 +102,18 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/more_logo"
-                />
+                android:src="@drawable/more_logo" />
 
             <TextView
                 android:id="@+id/taskstatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Status"
-                android:textSize="22dp"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                />
+                android:layout_alignParentBottom="true"
+                android:text="Status"
+                android:textAllCaps="true"
+                android:textSize="22dp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
