Implemented Complete Task , Delete Task , Update Task Completely With Popping An Alert Dialog Before Performing Anything

--- a/app/src/main/res/layout/add_task.xml
+++ b/app/src/main/res/layout/add_task.xml
@@ -96,6 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:background="@drawable/rounded_edittext_background"
+            android:drawableStart="@drawable/calender_icon"
             android:drawableTint="#673AB7"
             android:gravity="center"
             android:hint="Enter Task Date"
@@ -117,6 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:background="@drawable/rounded_edittext_background"
+            android:drawableStart="@drawable/clock_icon"
             android:drawableTint="#673AB7"
             android:clickable="true"
             android:gravity="center"
