--- a/app/src/main/res/layout/update_task.xml
+++ b/app/src/main/res/layout/update_task.xml
@@ -54,7 +54,7 @@
             android:id="@+id/updatetasktitle"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_edittext_background"
             android:drawableTint="#673AB7"
             android:gravity="center"
@@ -74,7 +74,7 @@
             android:id="@+id/updatetaskdescription"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_edittext_background"
             android:drawableTint="#673AB7"
             android:gravity="center"
@@ -94,7 +94,7 @@
             android:id="@+id/updatetaskdate"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_edittext_background"
             android:drawableStart="@drawable/calender_icon"
             android:drawableTint="#673AB7"
@@ -116,7 +116,7 @@
             android:id="@+id/updatetasktime"
             android:layout_margin="10dp"
             android:layout_width="match_parent"
-            android:layout_height="57dp"
+            android:layout_height="45dp"
             android:background="@drawable/rounded_edittext_background"
             android:drawableStart="@drawable/clock_icon"
             android:drawableTint="#673AB7"
@@ -128,6 +128,29 @@
             android:textColorHint="@color/black"
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="Task Status"
+            android:textSize="18dp"/>
+
+        <Spinner
+            android:id="@+id/spinnerTaskStatus"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:spinnerMode="dropdown"
+            android:layout_gravity="center"
+            android:drawableTint="#673AB7"
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            />
+
         <Button
             android:id="@+id/updatebtn"
             android:layout_width="match_parent"
@@ -135,6 +158,7 @@
             android:text="Update Task"
             android:layout_margin="10dp"
             />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
