Calender with no cancel and ok buttton impleneted and getting displayed aslo

--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -71,7 +71,7 @@
         android:onClick="addData"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:text="+ Add Data"
+        android:text="+ Add Task"
         android:textColor="#2196F3"
         android:textSize="25sp" />
 
