--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -47,8 +47,8 @@
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/calendar"
-                />
+                android:onClick="openDateDialog"
+                android:src="@drawable/calendar" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
