--- a/app/src/main/res/layout/custom_date_picker.xml
+++ b/app/src/main/res/layout/custom_date_picker.xml
@@ -1,11 +1,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
+
+    <ImageView
+        android:id="@+id/calenderbackbutton"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/calender_back_button"
+        />
+
+    <TextView
+        android:id="@+id/seealltasks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="See All Tasks"
+        android:textSize="25sp"
+        android:textColor="#2196F3"
+        android:layout_margin="5dp"
+        android:layout_centerHorizontal="true"
+        />
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/materialCalendarView"
         android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/seealltasks"
         android:padding="8dp"/>
+
 
 </RelativeLayout>
