--- a/app/src/main/res/layout/custom_date_picker.xml
+++ b/app/src/main/res/layout/custom_date_picker.xml
@@ -15,12 +15,14 @@
         android:id="@+id/seealltasks"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="See All Tasks"
-        android:textSize="25sp"
-        android:textColor="#2196F3"
-        android:layout_margin="5dp"
         android:layout_centerHorizontal="true"
-        />
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:text="See All Tasks"
+        android:textColor="#2196F3"
+        android:textSize="25sp" />
 
     <com.applandeo.materialcalendarview.CalendarView
         android:id="@+id/materialCalendarView"
