--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -21,15 +21,15 @@
             android:layout_margin="10dp">
 
             <TextView
-               android:id="@+id/hello"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Hello"
-               android:textStyle="bold"
-               android:typeface="sans"
-               android:textColor="#2196F3"
-               android:textSize="20sp"
-               />
+                android:id="@+id/hello"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello"
+                android:textStyle="bold"
+                android:typeface="sans"
+                android:textColor="#2196F3"
+                android:textSize="20sp"
+                />
 
             <TextView
                 android:id="@+id/alltasks"
@@ -59,8 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_margin="10dp"
-        >
+        android:layout_margin="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
