Toolbar Added for Home , Alarm Activity and for About us

--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context=".Home">
 
+    <include layout="@layout/toolbar"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,15 +52,6 @@
                 android:onClick="openDateDialog"
                 android:src="@drawable/calendar" />
 
-            <ImageView
-                android:id="@+id/logoutimg"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="15dp"
-                android:onClick="logoutUser"
-                android:layout_below="@+id/calenderimg"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/logout_icon" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
