--- a/app/src/main/res/layout/update_task.xml
+++ b/app/src/main/res/layout/update_task.xml
@@ -102,7 +102,10 @@
                 android:hint="Update Task Date"
                 android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black" />
+                android:textColorHint="@color/black"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -124,7 +127,9 @@
                 android:hint="Update Task Time"
                 android:inputType="text"
                 android:textColor="@color/black"
-                android:textColorHint="@color/black" />
+                android:textColorHint="@color/black"
+                android:focusable="false"
+                android:focusableInTouchMode="false"/>
 
             <TextView
                 android:layout_width="wrap_content"
